# kdashboard

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  NOTICE  README.md  TRADEMARK.md  UI_UX_REVIEW.md  index.html  package.json  playwright.config.ts  splashscreen.html  svelte.config.js  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml  tests.yml  update-pricing.yml
crates/ai_assistant/: Cargo.toml
crates/ai_assistant/src/: panel.rs
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/editor/: Cargo.toml
crates/editor/src/: lib.rs  yaml_editor.rs  yaml_serializer.rs
crates/k8s/: Cargo.toml
crates/k8s/src/: client.rs  lib.rs  port_forward.rs  resources.rs  runtime.rs  terminal.rs  types.rs  watch.rs
crates/logs/: Cargo.toml
crates/logs/src/: deployment_logs_view.rs  lib.rs  logs_view.rs  pod_logs_view.rs
crates/logs/src/pod_logs_view/: formatting.rs
crates/resources/: Cargo.toml
crates/resources/src/: deployment_details.rs  detail_shared.rs  detail_tabs.rs  details.rs  generic_details.rs  hpa_details.rs  lib.rs  pod_details.rs  port_forward_view.rs  replicaset_details.rs  table.rs  vpa_details.rs
crates/resources/src/table/: helpers.rs
crates/resources/tests/: table_tests.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: colors.rs  lib.rs  terminal_emulator.rs  terminal_view.rs
crates/ui/: Cargo.toml
crates/ui/src/: buttons.rs  container_icon.rs  icon.rs  lib.rs  theme.rs
crates/ui/tests/: container_icon_tests.rs  theme_tests.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: app_state.rs  app_view.rs  header.rs  lib.rs  resource_loader.rs  settings.rs  sidebar.rs  title_bar.rs
crates/workspace/src/app_view/: ai_chat_panel.rs  command_bar.rs
crates/workspace/src/app_view/ai_chat_panel/: markdown.rs
crates/workspace/tests/: app_state_tests.rs
docs/: CNAME  blog.html  cookies.html  index.html  privacy.html
docs/assets/: arrow-right-Cvzz7FMn.js  auth-client-DXkDU7_4.js  blog-posts-DNL09lWX.js  chevron-down-CkodEOPo.js  clock-Bqvu3qCl.js  cookies-BnQWIaeK.js  index-B2KdPwsz.js  index-CvWVMCSm.js  index-D_fHCMap.css  main-BBQXiHL9.js  navbar-i_2hK3s4.js  network-FOyCSa5z.js  page-layout-DRR63hop.js  privacy-BLpRZ3hy.js
docs/blog/: 5-kubectl-commands-you-should-know.html  kubernetes-pod-lifecycle-explained.html  kubernetes-resource-requests-limits.html  log-streaming-at-scale.html  namespace-strategies-for-teams.html  port-forwarding-best-practices.html  rust-for-desktop-apps.html  why-kubectl-is-not-enough.html
e2e/: cluster-unavailable.spec.ts  command-palette.spec.ts  detail-panel.spec.ts  helpers.ts  performance.spec.ts  resource-table.spec.ts
e2e/fixtures/: mock-k8s.ts  mocked-cluster.ts
scripts/: dev-cluster.sh  fetch-pricing.ts  integration-test.sh  run-all-benchmarks.sh  run-playwright-benchmarks.ts
src/: App.svelte  app.css  env.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: resource_serialization.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  settings.rs  state.rs  update.rs
src-tauri/src/commands/: app_commands.rs  k8s_commands.rs  mod.rs
src-tauri/src/k8s/: client.rs  context.rs  exec.rs  logs.rs  mod.rs  portforward.rs  security.rs  watch.rs
src-tauri/src/k8s/cost/: calculations.rs  metrics.rs  metrics_availability.rs  mod.rs  node_metrics.rs  nodes.rs  pricing.rs  tests.rs  types.rs
src-tauri/src/k8s/crd/: counts.rs  discovery.rs  listing.rs  mod.rs  schema.rs  tests.rs  types.rs
src-tauri/src/k8s/diagnostics/: aggregation.rs  mod.rs  pod.rs  tests.rs  types.rs  workload.rs
src-tauri/src/k8s/resources/: counting.rs  events.rs  helpers.rs  listing.rs  mod.rs  namespace.rs  operations.rs  types.rs
src-tauri/src/k8s/topology/: building.rs  extraction.rs  mod.rs  queries.rs  tests.rs  types.rs
src-tauri/tests/: integration_cost_security.rs  integration_diagnostics.rs  integration_k8s.rs  integration_operations.rs  integration_topology.rs
src-tauri/tests/fixtures/: seed.yaml
src/assets/fonts/: fonts.css
src/lib/: utils.test.ts  utils.ts
src/lib/actions/: navigation.ts  registry.logic.ts  registry.test.ts  registry.ts  types.ts
src/lib/components/command-palette/: CommandPalette.svelte  CommandPalette.test.ts  command-palette.ts
src/lib/components/common/: ConfirmDialog.svelte  ConnectionErrorOverlay.svelte  DeviconIcon.svelte  ErrorBanner.svelte  LazyView.svelte  SearchInput.svelte  StatusBadge.svelte  StatusBar.svelte  UpdateBanner.svelte  UpdateBanner.test.ts  ViewPanel.svelte  WorkloadStats.svelte  update-banner.ts
src/lib/components/context-menu/: ContextMenu.svelte  ContextMenu.test.ts  context-menu.ts
src/lib/extensions/: index.ts  registry.svelte.ts  types.ts
src/lib/stores/: _unshadow.ts  async-load.logic.ts  async-load.svelte.ts  context-menu.svelte.ts  cost.logic.ts  cost.svelte.ts  cost.test.ts  dialogs.logic.ts  dialogs.svelte.ts  dialogs.test.ts  k8s.logic.ts  k8s.svelte.ts  k8s.test.ts  performance.logic.ts  performance.svelte.ts  performance.test.ts  security.logic.ts  security.svelte.ts  security.test.ts  settings.logic.ts  settings.svelte.ts  settings.test.ts  toast.logic.ts  toast.svelte.ts  toast.test.ts  topology.logic.ts  topology.svelte.ts  topology.test.ts  ui.logic.ts  ui.svelte.ts  ui.test.ts
src/lib/types/: cluster.ts  cost.ts  index.ts  kubernetes.ts  security.ts  settings.ts  troubleshooting.ts  ui.ts
src/lib/utils/: age.test.ts  age.ts  codemirror-lazy.ts  container-icon.test.ts  container-icon.ts  context-colors.test.ts  context-colors.ts  context-icons.test.ts  context-icons.ts  dom.ts  k8s-colors.ts  k8s-helpers.test.ts  k8s-helpers.ts  k8s-schema-fields.ts  k8s-schema-metadata.ts  k8s-schema-resolver.test.ts  k8s-schema-resolver.ts  k8s-schema-resources.ts  k8s-schema.test.ts  k8s-schema.ts  keyboard.test.ts  keyboard.ts  related-resources.test.ts  related-resources.ts  tabLifecycle.test.ts  tabLifecycle.ts  workload-stats.test.ts  workload-stats.ts  yaml-intellisense.test.ts  yaml-intellisense.ts
(+137 files in other folders)
