[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/ui",
    "crates/workspace",
    "crates/resources",
    "crates/terminal",
    "crates/logs",
    "crates/ai_assistant",
    "crates/k8s",
    "crates/editor",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Kubernetes Dashboard Team"]

[workspace.dependencies]
# GPUI and rendering
gpui = "0.2.2"
gpui-component = { version = "0.5.1", features = ["tree-sitter-languages"] }

# Kubernetes
kube = { version = "0.90", features = ["ws", "runtime", "client"] }
kube-client = { version = "0.90", features = ["ws"] }
k8s-openapi = { version = "0.21", default-features = false, features = ["latest"] }

# Terminal
alacritty_terminal = "0.24"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Utilities
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
parking_lot = "0.12"
smallvec = "1"
derive_more = { version = "1", features = ["deref", "deref_mut"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

# Internal crates
k8s_client = { path = "crates/k8s" }
ui = { path = "crates/ui" }
workspace = { path = "crates/workspace" }
resources = { path = "crates/resources" }
terminal = { path = "crates/terminal" }
logs = { path = "crates/logs" }
ai_assistant = { path = "crates/ai_assistant" }
editor = { path = "crates/editor" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
opt-level = 3
strip = true
