[package]
name = "kdashboard"
version = "0.1.5"
description = "Lightweight desktop IDE for Kubernetes"
authors = ["Folio Innova S.L."]
edition = "2021"

[lib]
name = "kdashboard_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "kdashboard"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
kube = { version = "0.98", features = ["client", "runtime", "ws"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
base64 = "0.22"
dotenvy = "0.15"
hostname = "0.4"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[features]
integration = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "resource_serialization"
harness = false

[profile.dev]
incremental = true

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
