[package]
name = "kdashboard"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kdashboard"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
ui.workspace = true
workspace.workspace = true
k8s_client.workspace = true
resources.workspace = true
terminal.workspace = true
logs.workspace = true
ai_assistant.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
editor.workspace = true
