[package]
name = "editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gpui.workspace = true
ui.workspace = true
k8s_client.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
tracing.workspace = true
