[package]
name = "logs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gpui.workspace = true
ui.workspace = true
k8s_client.workspace = true
serde.workspace = true
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
tracing.workspace = true
smallvec.workspace = true
gpui-component.workspace = true
regex.workspace = true
dirs.workspace = true
chrono.workspace = true
serde_json.workspace = true
